2.9.0 Huge mod loader compatibility enhancement